panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_bitint_literal_in_if_condition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_bitint_literal_in_if_condition.c
---
success: true
exit_code: 0
----- stdout -----


int puts(char const*);


int main() {


    puts("it works");

    return
42

        ;
}

----- stderr -----
