panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_define_keyword.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--trace-preprocessor"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_define_keyword.c
---
success: true
exit_code: 0
----- stdout -----
panko/tests/cases/execute/preprocessor/test_define_keyword.c:3:9: #define double Object {
    name: "double",
    replacement: [
        Int("int")@panko/tests/cases/execute/preprocessor/test_define_keyword.c:3:16,
    ],
}

----- stderr -----
