panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_empty_macro_before_open_paren.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_empty_macro_before_open_paren.c
---
success: true
exit_code: 0
----- stdout -----


int puts(char const*);

void a() {
    puts("a");
}

void b() {
    puts("b");
}

void c() {
    puts("c");
}

void d() {
    puts("d");
}







int main() {

    d () ;

    d () ;
}

----- stderr -----
