panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_error_stringise_varargs_outside_varargs_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_error_stringise_varargs_outside_varargs_macro.c
---
success: true
exit_code: 0
----- stdout -----








----- stderr -----
