panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_function_like_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro.c
---
success: true
exit_code: 0
----- stdout -----

 


 
int main() {
    long int x = 42;
    return 2 * x + 1 ;
}

----- stderr -----
