panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_function_like_macro_with_empty_arguments.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro_with_empty_arguments.c
---
success: true
exit_code: 0
----- stdout -----




int main() {
    return - - 42;
}

----- stderr -----
